<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.awesome.d_planner.AddNote"
    android:background="#621114ee">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes_title"
        android:id="@+id/NoteEditorTitle"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/noteTitle"
        android:textColor="@color/abc_secondary_text_material_light" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes_default_title"
        android:id="@+id/noteTitle"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:layout_marginTop="42dp"
        android:textColor="@color/background_material_dark"
        android:layout_below="@+id/NoteEditorTitle"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/noteVal"
        android:selectAllOnFocus="true"
        android:text="@string/notes_default"
        android:textColor="@color/bright_foreground_disabled_material_light"
        android:textAlignment="gravity"
        android:layout_below="@+id/noteTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/Nsave_button_text"
        android:id="@+id/noteSaveButton"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/noteVal"
        android:layout_alignStart="@+id/noteUpdateButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/Ndelete_button_text"
        android:id="@+id/noteDeleteButton"
        android:layout_alignTop="@+id/noteSaveButton"
        android:layout_alignEnd="@+id/noteTitle" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/Nupdate_button_text"
        android:id="@+id/noteUpdateButton"
        android:layout_marginStart="27dp"
        android:layout_alignTop="@+id/noteSaveButton"
        android:layout_alignParentStart="true" />

</RelativeLayout>
